Removed position fixed for Header and set SideDrawer's z-index

--- a/src/components/Header/SideDrawer/SideDrawer.scss
+++ b/src/components/Header/SideDrawer/SideDrawer.scss
@@ -6,6 +6,7 @@
   top: 3.125rem;
   left: 0;
   background: black;
+  z-index: 90;
   transition: transform 0.2s ease-out;
 
   @media (min-width: 40rem) {
